add product link

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,3 +2,6 @@
 <p>
   The time is now: <%= Time.now %>
 </p>
+
+<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=sitraka_amazon-20&marketplace=amazon&region=US&placement=B00IOTZGOE&asins=B00IOTZGOE&linkId=MVT6VU2XWNJ7643D&show_border=true&link_opens_in_new_window=true">
+</iframe>
